adicionada função de criação de tasks

--- a/index.html
+++ b/index.html
@@ -21,18 +21,7 @@
         </a>
       </section>
       <section class="tasks__container">
-        <ul class="tasks__list">
-          <li class="task">
-            <label for="task" class="task-label">
-              <input type="checkbox" id="task" />
-              <p class="task-content">Lorem, ipsum dolor</p>
-            </label>
-            <div class="task__buttons">
-              <i class="fa-solid fa-pencil fa-xl"></i>
-              <i class="fa-solid fa-square-xmark fa-xl"></i>
-            </div>
-          </li>
-        </ul>
+        <ul class="tasks__list"></ul>
       </section>
       <div class="modal hidden" id="modal">
         <a id="close-modal-button">
